<resources>
    <string name="app_name">TodoList</string>
    <string name="bottom_sheet_option_camera">Use Camera</string>
    <string name="bottom_sheet_option_gallery">Upload from Gallery</string>
    <string name="bottom_sheet_option_heading">Add Photo</string>
    <string name="bottom_sheet_option_remove_photo">Remove Photo</string>
    <string name="create_new_todo">Title Of Todo</string>
    <string name="new_todo">New Todo</string>
    <string name="todo_list_master">Todo List Master</string>
    <string name="select_todo_priority">Select Todo Priority</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="add">Add</string>
</resources>