<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">


    <EditText
        android:id="@+id/et_add_todo"
        android:layout_width="383dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:hint="@string/create_new_todo"
        android:imeActionLabel="Done"
        android:inputType="textPersonName"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_todo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/new_todo"
        android:textColor="@color/colorBlack"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/list_icon"
        app:layout_constraintEnd_toEndOf="@+id/tv_todo_title"
        app:layout_constraintStart_toStartOf="@+id/tv_todo_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_todo_title" />

    <View
        android:id="@+id/margin_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/low_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@color/priorityLow"
        android:text="@string/low"
        app:layout_constraintBottom_toBottomOf="@+id/medium_btn"
        app:layout_constraintEnd_toStartOf="@+id/medium_btn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/medium_btn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/medium_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@color/priorityMedium"
        android:text="@string/medium"
        app:layout_constraintBottom_toBottomOf="@+id/high_btn"
        app:layout_constraintEnd_toStartOf="@+id/high_btn"
        app:layout_constraintTop_toTopOf="@+id/high_btn" />

    <Button
        android:id="@+id/add_todo_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@color/colorAccent"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/high_btn"
        app:layout_constraintStart_toStartOf="@+id/low_btn" />

    <Button
        android:id="@+id/high_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:background="@color/priorityHigh"
        android:text="@string/high"
        app:layout_constraintBottom_toTopOf="@+id/add_todo_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_todo_priority"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/select_todo_priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/select_todo_priority"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_add_todo"
        app:layout_constraintStart_toStartOf="@+id/et_add_todo"
        app:layout_constraintTop_toBottomOf="@+id/et_add_todo" />

</androidx.constraintlayout.widget.ConstraintLayout>